Fixed datetime format

--- a/CinemaBookingSystem/appsettings.json
+++ b/CinemaBookingSystem/appsettings.json
@@ -10,3 +10,8 @@
 		}
 	}
 }
+
+
+// Laptop: Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=BerrasCinema;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
+
+// Hemma: Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BerrasCinema;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
